feat(workflowkit): 增强 workflow 列表查询
